[gd_scene load_steps=7 format=2]

[ext_resource path="res://prototype/collectables/collectable.gd" type="Script" id=1]
[ext_resource path="res://prototype/collectables/donut.png" type="Texture" id=2]
[ext_resource path="res://prototype/collectables/pizza.png" type="Texture" id=3]
[ext_resource path="res://prototype/collectables/hotdog.png" type="Texture" id=4]
[ext_resource path="res://prototype/audio/412068__inspectorj__chewing-carrot-a.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 16.645

[node name="collectable" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 18.7349, 18.1619 )
shape = SubResource( 1 )

[node name="gfx" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="gfx"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
color = Color( 0.0666667, 0.921569, 0.301961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite_donut" type="Sprite" parent="gfx"]
visible = false
position = Vector2( 18.9517, 18.2026 )
scale = Vector2( 0.49652, 0.49652 )
texture = ExtResource( 2 )

[node name="sprite_hotdog" type="Sprite" parent="gfx"]
visible = false
position = Vector2( 18.9517, 18.2026 )
scale = Vector2( 0.49652, 0.49652 )
texture = ExtResource( 4 )

[node name="sprite_pizza" type="Sprite" parent="gfx"]
visible = false
position = Vector2( 20.8246, 17.828 )
scale = Vector2( 0.49652, 0.49652 )
texture = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 18.8424, 17.6788 )
scale = Vector2( 1.34848, 1.34848 )

[node name="particles_collected" type="CPUParticles2D" parent="."]
position = Vector2( 18.9161, 17.6051 )
emitting = false
amount = 25
lifetime = 0.25
one_shot = true
explosiveness = 0.5
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 20.0
gravity = Vector2( 0, 0 )
orbit_velocity = 25.0
radial_accel = 35.0
color = Color( 0.0666667, 0.921569, 0.301961, 1 )

[node name="particles_ambient" type="CPUParticles2D" parent="."]
position = Vector2( 18.5415, 18.3543 )
amount = 5
lifetime = 0.25
explosiveness = 0.5
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 20.0
gravity = Vector2( 0, 0 )
angular_velocity = 25.0
radial_accel = 35.0
color = Color( 0.0666667, 0.921569, 0.301961, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Audio_Eaten" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
